# Ruhestand-App-Final

./: .gitattributes  .gitignore  ACHIEVEMENT_OVERVIEW.md  ADAPTER-ELIMINATION-REPORT.md  AGENTS.md  ARCHITEKTUR_UND_FACHKONZEPT.md  BALANCE_MODULES_README.md  BALANCE_START.BAT  BEWERTUNG_SUITE.md  Balance.html  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CODEX.md  CODE_QUALITY_ANALYSIS.md  EXPERT_GUTACHTEN.md  Expert_Codex.md  FEATURE_BRANCH_WORKFLOW.md  GEMINI.md  GUIDED_TOURS.md  Handbuch.html  INTERACTIVE-SWITCHER-GUIDE.md  MULTI_PERSON_EVALUATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_POC.md  RECOVERY_FROM_MAIN.md  RUST_ENGINE_INTEGRATION_STRATEGY.md  RUST_MIGRATION_PROMPT.md  RUST_MIGRATION_PROMPT_V2.md  RUST_MIGRATION_PROMPT_V3.md  RUST_MIGRATION_PROMPT_V4.md  RUST_MIGRATION_PROMPT_V5.md  SIMULATOR_MODULES_README.md  Simulator.html  TECHNICAL.md  TYPESCRIPT_MIGRATION_KONZEPT.md  agents.md  analyze_log.js  (+148 more)
.claude/: settings.local.json
.svelte-kit/: ambient.d.ts
Presentation/: ruhestand-suite-overview.html  ruhestand-suite-technical.html
audit/: inventory.json  report.html  report.md
config/: tsconfig.json
css/: balance.css
docs/: AUTO_OPTIMIZE_DETAILS.md  DYNAMIC_FLEX_WALKTHROUGH.md  HOUSEHOLD_ANALYSIS_KORRIGIERT.md  HOUSEHOLD_BALANCE_PROGRESS.md  HOUSEHOLD_FEATURES.md  (+12 more)
rust_engine/: .gitignore  Cargo.toml
rust_engine/src/: backtest.rs  config.rs  core.rs  lib.rs  market.rs  monte_carlo.rs  simulation.rs  spending.rs  tax.rs  transactions.rs  types.rs  validation.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
(+668 files in other folders)
