[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["std_rng"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

# Native-specific dependencies (future proofing)
# Native-specific dependencies (for parallel MC)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[profile.release]
opt-level = 's'     # Size optimization
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
